--- a/templates/home.html
+++ b/templates/home.html
@@ -8,12 +8,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
 
+
 <script src="../resources/scripts/Home.js" type="text/babel"></script>
 <script type="text/babel">
   ReactDOM.render(
-      <Home>
-        {greeting}
-      </Home>,
+      <div>
+        <Home>
+        {{greeting}}
+      </Home>
+        </div>,
       document.getElementById('root')
   );
 </script>
