update css and some react edits

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -1,5 +1,5 @@
 {% extends "common.html" %}
-{% block title %}Browse{% endblock %}
+{% block title %}Feed{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="/resources/styles/feed.css">
