--- a/resources/styles/common.css
+++ b/resources/styles/common.css
@@ -53,6 +53,10 @@ h1 {
 	font-family: Helvetica, sans-serif;
 }
 
+#about {
+	font-size: 20px;
+}
+
 .button {
 	background-color: #1a2930;
 	color: #f2f2f2;
@@ -65,25 +69,25 @@ h1 {
 	height: 70vh;
 	padding: 20vh auto 10vh auto;
 	text-align: center;
-	grid-template-rows: 2;
+	grid-template-rows: 1;
 	grid-template-columns: 1;
 }
 
-.rowse {
+.feedPage {
 	display: grid;
-	grid-template-columns: 1;
-	grid-template-rows: 2;
+	grid-template-columns: 3fr 1fr;
+	grid-template-rows: 1;
+	grid-column-gap: 10px;
 }
 
 .browseContainer {
 	margin: 30px 0 30px 0;
 	float: right;
-	grid-column: 1;
-	grid-row: 1;
 }
+
 .postContainer {
-	grid-column: 1;
-	grid-row: 2;
+	grid-column: 1 / span 1;
+	grid-row: 1;
 	margin-top: 20px;
 }
 .data {
@@ -91,6 +95,20 @@ h1 {
 	text-align: left;
 	margin-bottom: 5px;
 }
+
+.about {
+	grid-row: 1;
+	grid-column: 2 / span 1;
+	border: solid 3px;
+	margin-top: 15px;
+	padding: 5px;
+}
+
+#likes,
+.button {
+	margin-top: 10px;
+}
+
 .post {
 	display: grid;
 	grid-template-columns: 1fr 6fr;
@@ -100,7 +118,7 @@ h1 {
 	padding: 5px 5px 0 5px;
 	border-radius: 20px;
 	box-shadow: inset 7em 1.75em #4392f1;
-	border: solid;
+	border: solid 2px;
 	background: #98b9f2;
 }
 .content {
