--- a/templates/pun.html
+++ b/templates/pun.html
@@ -1,7 +1,8 @@
-      <div className="post">
+     
+     <div className="post">
           <div className="score">
             <span id="likes"> <strong>{{post.score}}</strong></span>
-            <form className="like_container" action="/browse" method="post">
+            <form className="like_container" action="/feed" method="post">
               <input className="hidden" type="hidden" name="kind" value="upvote"></input>
               <input type="hidden" name="post_id" value="{{post.key.id()}}"></input>
               <input className="button" type="submit" value="^"></input>
