--- a/templates/pun.html
+++ b/templates/pun.html
@@ -1,17 +1,19 @@
      
      <div className="post">
           <div className="score">
-            <span id="likes"> <strong>{{post.score}}</strong></span>
-            <form className="like_container" action="/feed" method="post">
-              <input className="hidden" type="hidden" name="kind" value="upvote"></input>
-              <input type="hidden" name="post_id" value="{{post.key.id()}}"></input>
-              <input className="button" type="submit" value="+1"></input>
-            </form>
-            <form className="like_container" action="/feed" method="post">
-              <input className="hidden" type="hidden" name="kind" value="downvote"></input>
-              <input type="hidden" name="post_id" value="{{post.key.id()}}"></input>
-              <input className="button" type="submit" value="-1"></input>
-            </form>
+            <div className='likeContainer'>
+              <span id="likes"> <strong>{{post.score}}</strong></span>
+              <form className="upvote_form" action="/feed" method="post">
+                <input className="hidden" type="hidden" name="kind" value="upvote"></input>
+                <input type="hidden" name="post_id" value="{{post.key.id()}}"></input>
+                <input className="button" type="submit" value="+1"></input>
+              </form>
+              <form className="downvote_form" action="/feed" method="post">
+                <input className="hidden" type="hidden" name="kind" value="downvote"></input>
+                <input type="hidden" name="post_id" value="{{post.key.id()}}"></input>
+                <input className="button" type="submit" value="-1"></input>
+              </form>
+            </div>
           </div>
             <div className="postContent">
                 <div className="data">
